@@ -1,3 +1,5 @@
 -Add the methods to save and load data from data.txt
 -Create the methods to make, remove, modify and display reservations properly
--change location of label of salle emploi to the buttomn
+
+-I really should think into making this dynamically, which mean user can add amphis and salles n stuff
+-I also should work a little bit on the settings
